# Render_WebGPU

./: .gitignore
BaseProject/: CMakeLists.txt  Renderer.cpp  Renderer.h  main.cpp  webgpu-utils.cpp
BaseProject/build-web/: App.html  App.js  App.wasm  CMakeCache.txt  Makefile  cmake_install.cmake
BaseProject/build-web/glfw3webgpu/: Makefile  cmake_install.cmake
BaseProject/build-web/webgpu/: Makefile  cmake_install.cmake
BaseProject/resources/: piramide.txt  piramide2.txt  shaders.wgsl  shaders2.wgsl  webgpu.txt
JuegoVida/: index.html
